sonarCodeSmellFix